# dotutils

./: README.md  pyproject.toml
dotutils/: QRGenerator.py  fileorganiser.py
