[tool.poetry]
name = "dotutils"
version = "0.1.0"
description = ""
authors = ["LaiqianDS <ji.laiqian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qrcode = "^8.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
